add hardcoded form on main

--- a/bash-lang/src/app/page.module.css
+++ b/bash-lang/src/app/page.module.css
@@ -1,5 +1,11 @@
 .pattern {
-    background-color: transparent;
-    background-size: 10px 10px;
-    background-image: repeating-linear-gradient(45deg, #70c76f 0, #70c76f 1px, #54c252 0, #54c252 50%);
+  background-color: transparent;
+  background-size: 10px 10px;
+  background-image: repeating-linear-gradient(
+    45deg,
+    #70c76f 0,
+    #70c76f 1px,
+    #54c252 0,
+    #54c252 50%
+  );
 }
